Revise README formatting and content
Updated README for clarity and consistency across sections.